alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,7 @@ img {
   display: grid;
   grid-template-columns: 1fr 2fr;
   padding: 1rem;
+  margin-bottom: 60px;
 }
 
 iframe {
